@@ -3,6 +3,8 @@
 	  - declared static functions static
 	* src/commandconf.c:
 	  - fixed 'unused-but-set-variable' compiler warning
+	* src/compare_db.c:
+	  - fixed some 'format' compiler warnings
 
 2011-09-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/aide.h, src/aide.c:
